--- a/src/app/pages/collections/collection-form/collection-form.page.html
+++ b/src/app/pages/collections/collection-form/collection-form.page.html
@@ -1,22 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button default-href="#"></ion-back-button>
-    </ion-buttons>
-    <ion-title>{{ title | transloco }}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-back-button default-href="#"></ion-back-button>
-      </ion-buttons>
-      <ion-title size="large">{{ title | transloco }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<app-page [title]="title">
   <ion-card>
     <ion-card-content>
       <form (ngSubmit)="submit()" [formGroup]="form">
@@ -36,4 +18,4 @@
       </form>
     </ion-card-content>
   </ion-card>
-</ion-content>
+</app-page>
