--- a/src/app/pages/collections/collections-home/collections-home.page.html
+++ b/src/app/pages/collections/collections-home/collections-home.page.html
@@ -1,16 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>{{ 'MENUS.COLLECTIONS' | transloco }}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ 'MENUS.COLLECTIONS' | transloco }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<app-page title="MENUS.COLLECTIONS">
   @if (!!collections && collections.length > 0) {
     @for (collection of collections; track collection.id) {
       <app-collection-list-item [collection]="collection"></app-collection-list-item>
@@ -26,4 +14,5 @@
       </ion-card-content>
     </ion-card>
   }
-</ion-content>
+</app-page>
+
