--- a/src/app/ui/components/collection-list-item/collection-list-item.component.html
+++ b/src/app/ui/components/collection-list-item/collection-list-item.component.html
@@ -1,4 +1,4 @@
-<ion-card (click)="goToSeriesList()">
+<ion-card>
   <ion-card-header>
     <ion-card-title>{{ collection.name }}</ion-card-title>
     <ion-card-subtitle>{{ 'COLLECTIONS.LIST.TITLE' | transloco }}</ion-card-subtitle>
@@ -12,6 +12,11 @@
         <ion-col class="ion-justify-content-end" style="display: flex">
           <ion-button (click)="$event.preventDefault(); deleteCollection()" aria-label="Delete" color="danger">
             <ion-icon name="trash-sharp"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size="12">
+          <ion-button [routerLink]="['/series', collection.id]" aria-label="GoToCollection"
+                      expand="block">{{ 'COLLECTIONS.LIST.GO_TO_COLLECTION' | transloco }}
           </ion-button>
         </ion-col>
       </ion-row>
