--- a/src/app/pages/series/series-home/series-home.page.html
+++ b/src/app/pages/series/series-home/series-home.page.html
@@ -1,11 +1,12 @@
 <app-page title="MENUS.SERIES">
-
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-content [fullscreen]="true" class="ion-padding">
     @for (serie of series; track serie.id) {
       <app-series-list-item [series]="serie"></app-series-list-item>
     }
-    <ion-fab-button [routerLink]="['/series/create', collectionId]">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-fab-button [routerLink]="['/series/create', collectionId]">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </ion-content>
 </app-page>
