Series translations and series fixes

--- a/src/app/pages/series/series-form/series-form.page.html
+++ b/src/app/pages/series/series-form/series-form.page.html
@@ -6,13 +6,7 @@
           <ion-row>
             <ion-col size="12">
               <ion-item>
-                <ion-input [label]="'COLLECTIONS.FORM.FIELDS.NAME' | transloco" formControlName="name"
-                           labelPlacement="floating"></ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col size="12">
-              <ion-item>
-                <ion-input type="number" [label]="'COLLECTIONS.FORM.FIELDS.PRICE' | transloco" formControlName="price"
+                <ion-input [label]="'SERIES.FORM.FIELDS.NAME' | transloco" formControlName="name"
                            labelPlacement="floating"></ion-input>
               </ion-item>
             </ion-col>
