--- a/src/app/pages/series/series-home/series-home.page.html
+++ b/src/app/pages/series/series-home/series-home.page.html
@@ -2,7 +2,7 @@
     @for (serie of series; track serie.id) {
       <app-series-list-item [series]="serie"></app-series-list-item>
     }
-    <ion-fab>
+    <ion-fab class="fixed-bottom">
       <ion-fab-button [routerLink]="['/series/create', collectionId]">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
