--- a/src/app/formly/types/input-number-button/input-number-button.component.html
+++ b/src/app/formly/types/input-number-button/input-number-button.component.html
@@ -3,11 +3,12 @@
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
   labelPlacement="floating"
-  [disabled]="props.disabled">
-  <ion-button slot="start" aria-label="Add">
+  [disabled]="props.disabled"
+>
+  <ion-button slot="start" aria-label="Add" (click)="increaseNumber()">
     <ion-icon slot="icon-only" name="add" aria-hidden="true"></ion-icon>
   </ion-button>
-  <ion-button fill="clear" slot="end" aria-label="Remove">
+  <ion-button fill="clear" slot="end" aria-label="Remove" (click)="decreaseNumber()">
     <ion-icon slot="icon-only" name="remove" aria-hidden="true"></ion-icon>
   </ion-button>
 </ion-input>
