--- a/src/app/ui/components/series-list-item/series-list-item.component.html
+++ b/src/app/ui/components/series-list-item/series-list-item.component.html
@@ -1,5 +1,6 @@
 <ion-card>
   <ion-card-header>
+    <img [alt]="series.name" [src]="https://ionicframework.com/docs/img/demos/card-media.png" />
     <ion-card-title>{{ series.name }}</ion-card-title>
     <ion-card-subtitle>{{ 'SERIES.LIST.TITLE' | transloco }}</ion-card-subtitle>
   </ion-card-header>
