Add wrappers; Port collection form to formly

--- a/src/app/formly/components/submit-button/submit-button.component.html
+++ b/src/app/formly/components/submit-button/submit-button.component.html
@@ -1,1 +1,3 @@
-<ion-button type="submit" [disabled]="form?.invalid" expand="block">{{ 'GLOBAL.SUBMIT' | transloco }}</ion-button>
+<ion-button type="submit" [disabled]="form?.invalid" expand="block">{{
+  'GLOBAL.SUBMIT' | transloco
+}}</ion-button>
