--- a/src/app/formly/types/input-number/input-number.component.html
+++ b/src/app/formly/types/input-number/input-number.component.html
@@ -3,4 +3,5 @@
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
   labelPlacement="floating"
-  [disabled]="props.disabled"></ion-input>
+  [disabled]="props.disabled"
+></ion-input>
