--- a/src/app/formly/types/input-textarea/input-textarea.component.html
+++ b/src/app/formly/types/input-textarea/input-textarea.component.html
@@ -2,4 +2,5 @@
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
   labelPlacement="floating"
-  [disabled]="props.disabled"></ion-textarea>
+  [disabled]="props.disabled"
+></ion-textarea>
