--- a/src/app/pages/collections/collection-form/collection-form.page.html
+++ b/src/app/pages/collections/collection-form/collection-form.page.html
@@ -6,12 +6,17 @@
           <ion-row>
             <ion-col size="12">
               <ion-item>
-                <ion-input [label]="'COLLECTIONS.FORM.FIELDS.NAME' | transloco" formControlName="name"
-                           labelPlacement="floating"></ion-input>
+                <ion-input
+                  [label]="'COLLECTIONS.FORM.FIELDS.NAME' | transloco"
+                  formControlName="name"
+                  labelPlacement="floating"
+                ></ion-input>
               </ion-item>
             </ion-col>
             <ion-col size="12">
-              <ion-button expand="block" type="submit">{{ 'GLOBAL.SUBMIT' | transloco }}</ion-button>
+              <ion-button expand="block" type="submit"
+                >{{ 'GLOBAL.SUBMIT' | transloco }}</ion-button
+              >
             </ion-col>
           </ion-row>
         </ion-grid>
