--- a/src/app/formly/types/input-textarea/input-textarea.component.html
+++ b/src/app/formly/types/input-textarea/input-textarea.component.html
@@ -1,6 +1,6 @@
 <ion-textarea
+  [disabled]="props.disabled ?? false"
+  [formControl]="field.formControl"
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
-  labelPlacement="floating"
-  [disabled]="props.disabled"
-></ion-textarea>
+  labelPlacement="floating"></ion-textarea>
