--- a/src/app/formly/components/formly/formly.component.html
+++ b/src/app/formly/components/formly/formly.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submitEv.emit(model)">
-  <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+<form (ngSubmit)="submitEv.emit(model)" [formGroup]="form">
+  <formly-form [fields]="fields" [form]="form" [model]="model"></formly-form>
   <ng-content></ng-content>
 </form>
