--- a/src/app/formly/types/input-number-button/input-number-button.component.html
+++ b/src/app/formly/types/input-number-button/input-number-button.component.html
@@ -1,14 +1,15 @@
 <ion-input
-  type="number"
+  [disabled]="props.disabled ?? false"
+  [formControl]="field.formControl"
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
   labelPlacement="floating"
-  [disabled]="props.disabled"
+  type="number"
 >
-  <ion-button slot="start" aria-label="Add" (click)="increaseNumber()">
-    <ion-icon slot="icon-only" name="add" aria-hidden="true"></ion-icon>
+  <ion-button (click)="increaseNumber()" aria-label="Add" slot="start">
+    <ion-icon aria-hidden="true" name="add" slot="icon-only"></ion-icon>
   </ion-button>
-  <ion-button fill="clear" slot="end" aria-label="Remove" (click)="decreaseNumber()">
-    <ion-icon slot="icon-only" name="remove" aria-hidden="true"></ion-icon>
+  <ion-button (click)="decreaseNumber()" aria-label="Remove" fill="clear" slot="end">
+    <ion-icon aria-hidden="true" name="remove" slot="icon-only"></ion-icon>
   </ion-button>
 </ion-input>
