--- a/src/app/formly/types/input-number/input-number.component.html
+++ b/src/app/formly/types/input-number/input-number.component.html
@@ -1,7 +1,8 @@
 <ion-input
-  type="number"
+  [disabled]="props.disabled ?? false"
+  [formControl]="field.formControl"
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
   labelPlacement="floating"
-  [disabled]="props.disabled"
+  type="number"
 ></ion-input>
