--- a/src/app/ui/components/series-list-item/series-list-item.component.html
+++ b/src/app/ui/components/series-list-item/series-list-item.component.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-card-header>
-    <img [alt]="series.name" [src]="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <img [alt]="series.name" [src]="" />
     <ion-card-title>{{ series.name }}</ion-card-title>
     <ion-card-subtitle>{{ 'SERIES.LIST.TITLE' | transloco }}</ion-card-subtitle>
   </ion-card-header>
@@ -17,7 +17,7 @@
         </ion-col>
         <ion-col size="12">
           <ion-button [routerLink]="['/series', series.id]" aria-label="GoToSeries" expand="block"
-            >{{ 'SERIES.LIST.GO_TO_SERIES' | transloco }}
+          >{{ 'SERIES.LIST.GO_TO_SERIES' | transloco }}
           </ion-button>
         </ion-col>
       </ion-row>
