--- a/src/app/formly/components/submit-button/submit-button.component.html
+++ b/src/app/formly/components/submit-button/submit-button.component.html
@@ -1,6 +1,5 @@
 @if (form) {
-  <ion-button [disabled]="form.invalid" expand="block" type="submit">{{
-      'GLOBAL.SUBMIT' | transloco
-    }}
+  <ion-button [disabled]="form.invalid" expand="block" type="submit"
+    >{{ 'GLOBAL.SUBMIT' | transloco }}
   </ion-button>
 }
