--- a/src/app/formly/types/input-textarea/input-textarea.component.html
+++ b/src/app/formly/types/input-textarea/input-textarea.component.html
@@ -3,4 +3,5 @@
   [formControl]="field.formControl"
   [label]="props.label | transloco"
   [placeholder]="props.placeholder | transloco"
-  labelPlacement="floating"></ion-textarea>
+  labelPlacement="floating"
+></ion-textarea>
