--- a/src/app/pages/collections/collection-form-v2/collection-form-v2.page.html
+++ b/src/app/pages/collections/collection-form-v2/collection-form-v2.page.html
@@ -1,19 +1,14 @@
 <app-page [title]="title">
   @if (fields) {
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>{{ title | transloco }}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <app-formly
-          (submitEv)="submit()"
-          [fields]="fields"
-          [form]="form"
-          [model]="model$ | async"
-        >
-          <app-submit-button [form]="form"></app-submit-button>
-        </app-formly>
-      </ion-card-content>
-    </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{ title | transloco }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <app-formly (submitEv)="submit()" [fields]="fields" [form]="form" [model]="model$ | async">
+        <app-submit-button [form]="form"></app-submit-button>
+      </app-formly>
+    </ion-card-content>
+  </ion-card>
   }
 </app-page>
