--- a/src/app/ui/components/series-list-item/series-list-item.component.html
+++ b/src/app/ui/components/series-list-item/series-list-item.component.html
@@ -18,16 +18,18 @@
           {{ 'SERIES.LIST.VOLUME_AMOUNT' | transloco: { amount: volumesCount ?? 0 } }}
         </ion-col>
         <ion-col class="ion-justify-content-end" style="display: flex">
-          <ion-button (click)="deleteSeries()" aria-label="Delete" color="danger">
-            <ion-icon name="trash-sharp"></ion-icon>
-          </ion-button>
-        </ion-col>
-        <ion-col size="12">
-          <ion-button [routerLink]="['/volumes', series.id]" aria-label="GoToSeries" expand="block"
-            >{{ 'SERIES.LIST.GO_TO_SERIES' | transloco }}
+          <ion-button aria-label="Actions" id="open-action-sheet">
+            <ion-icon name="cog-sharp"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
   </ion-card-content>
 </ion-card>
+
+<ion-action-sheet
+  trigger="open-action-sheet"
+  [header]="'GLOBAL.ACTIONS' | transloco"
+  [buttons]="actionSheetButtons"
+  (didDismiss)="onActionClicked($event)"
+></ion-action-sheet>
