--- a/src/app/pages/collections/collections-home/collections-home.page.html
+++ b/src/app/pages/collections/collections-home/collections-home.page.html
@@ -8,6 +8,10 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
+  <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   } @else {
   <ion-card>
     <ion-card-header>
@@ -16,8 +20,8 @@
 
     <ion-card-content>
       <ion-button expand="block" [routerLink]="['/collections/create']"
-        >{{ 'MENUS.ADD_NEW_COLLECTION' | transloco }}</ion-button
-      >
+        >{{ 'MENUS.ADD_NEW_COLLECTION' | transloco }}
+      </ion-button>
     </ion-card-content>
   </ion-card>
   }
