--- a/src/app/pages/collections/collections-home/collections-home.page.html
+++ b/src/app/pages/collections/collections-home/collections-home.page.html
@@ -1,28 +1,31 @@
 <app-page title="MENUS.COLLECTIONS">
-  @if (!!collections && collections.length > 0) { @for (collection of collections; track
-  collection.id) {
-  <app-collection-list-item [collection]="collection"></app-collection-list-item>
-  }
-  <ion-fab class="fixed-bottom">
-    <ion-fab-button [routerLink]="['/collections/create']">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  @if (!!collections && collections.length > 0) {
+    @for (collection of collections; track
+      collection.id) {
+      <app-collection-list-item
+        [collection]="collection"
+        (reloadCollections)="reloadCollections()"></app-collection-list-item>
+    }
+    <ion-fab class="fixed-bottom">
+      <ion-fab-button [routerLink]="['/collections/create']">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 
-  <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+    <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   } @else {
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{ 'COLLECTIONS.LIST.NO_COLLECTIONS' | transloco }}</ion-card-title>
-    </ion-card-header>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{ 'COLLECTIONS.LIST.NO_COLLECTIONS' | transloco }}</ion-card-title>
+      </ion-card-header>
 
-    <ion-card-content>
-      <ion-button expand="block" [routerLink]="['/collections/create']"
+      <ion-card-content>
+        <ion-button expand="block" [routerLink]="['/collections/create']"
         >{{ 'MENUS.ADD_NEW_COLLECTION' | transloco }}
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
   }
 </app-page>
