--- a/src/app/ui/components/page/page.component.html
+++ b/src/app/ui/components/page/page.component.html
@@ -2,7 +2,9 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-back-button default-href="#"></ion-back-button>
+      @if (showBackButton) {
+        <ion-back-button default-href="#"></ion-back-button>
+      }
     </ion-buttons>
     <ion-title>{{ title | transloco }}</ion-title>
   </ion-toolbar>
