--- a/src/app/pages/volumes/volumes-home/volumes-home.page.html
+++ b/src/app/pages/volumes/volumes-home/volumes-home.page.html
@@ -1,7 +1,16 @@
 <app-page title="MENUS.VOLUMES">
-  @for (volume of volumes; track volume.id) {
-  <app-volume-list-item [volume]="volume" (reloadVolumes)="reloadVolumes()"></app-volume-list-item>
-  }
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      @for (volume of volumes; track volume.id) {
+      <ion-col size="12" size-sm="10" size-md="8" size-lg="6">
+        <app-volume-list-item
+          [volume]="volume"
+          (reloadVolumes)="reloadVolumes()"
+        ></app-volume-list-item>
+      </ion-col>
+      }
+    </ion-row>
+  </ion-grid>
 
   <ion-fab class="fixed-bottom">
     <ion-fab-button [routerLink]="['/volumes/create', seriesId]">
