Convert all forms to modal Translations Remove old forms Rename forms Apple privacy Pictures modal

--- a/src/app/pages/collections/collections-home/collections-home.page.html
+++ b/src/app/pages/collections/collections-home/collections-home.page.html
@@ -37,6 +37,6 @@
   }
 
   <app-modal [showModal]="showModal" [title]="formTitle">
-    <app-collection-form-v2 (reloadList)="reloadRows()" [modalInfo]="modalInfo"></app-collection-form-v2>
+    <app-collection-form (reloadList)="reloadRows()" [modalInfo]="modalInfo"></app-collection-form>
   </app-modal>
 </app-page>
