--- a/src/app/pages/series/series-home/series-home.page.html
+++ b/src/app/pages/series/series-home/series-home.page.html
@@ -1,19 +1,20 @@
-<app-page title="MENUS.SERIES">
+<app-page [backRoute]="['/collections']" [showBackButton]="true" title="MENUS.SERIES">
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       @for (serie of series; track serie.id) {
-      <ion-col size="12" size-sm="10" size-md="8" size-lg="6">
-        <app-series-list-item
-          [series]="serie"
-          (reloadSeries)="reloadSeries()"
-        ></app-series-list-item>
-      </ion-col>
+        <ion-col size="12" size-sm="10" size-md="8" size-lg="6">
+          <app-series-list-item
+            [series]="serie"
+            (reloadSeries)="reloadSeries()"
+            (openEditForm)="openEditSeries($event)"
+          ></app-series-list-item>
+        </ion-col>
       }
     </ion-row>
   </ion-grid>
 
   <ion-fab class="fixed-bottom">
-    <ion-fab-button [routerLink]="['/series/create', collectionId]">
+    <ion-fab-button (click)="openCreateForm()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
@@ -21,4 +22,8 @@
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
+
+  <app-modal [showModal]="showModal" [title]="formTitle">
+    <app-series-form (reloadList)="reloadRows()" [modalInfo]="modalInfo"></app-series-form>
+  </app-modal>
 </app-page>
