--- a/src/app/pages/volumes/volumes-home/volumes-home.page.html
+++ b/src/app/pages/volumes/volumes-home/volumes-home.page.html
@@ -1,19 +1,20 @@
-<app-page title="MENUS.VOLUMES">
+<app-page [backRoute]="['/series', seriesId]" [showBackButton]="true" title="MENUS.VOLUMES">
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       @for (volume of volumes; track volume.id) {
-      <ion-col size="12" size-sm="10" size-md="8" size-lg="6">
-        <app-volume-list-item
-          [volume]="volume"
-          (reloadVolumes)="reloadVolumes()"
-        ></app-volume-list-item>
-      </ion-col>
+        <ion-col size="12" size-sm="10" size-md="8" size-lg="6">
+          <app-volume-list-item
+            [volume]="volume"
+            (reloadVolumes)="reloadVolumes()"
+            (openEditForm)="openEditVolumes($event)"
+          ></app-volume-list-item>
+        </ion-col>
       }
     </ion-row>
   </ion-grid>
 
   <ion-fab class="fixed-bottom">
-    <ion-fab-button [routerLink]="['/volumes/create', seriesId]">
+    <ion-fab-button (click)="openCreateForm()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
@@ -21,4 +22,8 @@
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
+
+  <app-modal [showModal]="showModal" [title]="formTitle">
+    <app-volumes-form (reloadList)="reloadRows()" [modalInfo]="modalInfo"></app-volumes-form>
+  </app-modal>
 </app-page>
