--- a/src/app/ui/components/page/page.component.html
+++ b/src/app/ui/components/page/page.component.html
@@ -1,7 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      @if (showBackButton) {
+        <ion-button [routerLink]="backRoute">
+          <ion-icon name="arrow-back"></ion-icon>
+        </ion-button>
+      }
     </ion-buttons>
     <ion-title>{{ title | transloco }}</ion-title>
   </ion-toolbar>
