Settings page initial setup Export database to json Write file to filesystem Button groups

--- a/src/app/ui/components/modal/modal.component.html
+++ b/src/app/ui/components/modal/modal.component.html
@@ -3,7 +3,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-button (click)="cancel()">Cancel</ion-button>
+          <ion-button (click)="cancel()">{{ 'GLOBAL.EXIT' | transloco }}</ion-button>
         </ion-buttons>
         <ion-title>{{ title | transloco }}</ion-title>
       </ion-toolbar>
