Add settings translations Save settings Load settings Set saved lang Format

--- a/src/app/formly/components/formly/formly.component.html
+++ b/src/app/formly/components/formly/formly.component.html
@@ -1,4 +1,9 @@
 <form (ngSubmit)="submitEv.emit(model)" [formGroup]="form">
-  <formly-form (modelChange)="modelChange.emit($event)" [fields]="fields" [form]="form" [model]="model"></formly-form>
+  <formly-form
+    (modelChange)="modelChange.emit($event)"
+    [fields]="fields"
+    [form]="form"
+    [model]="model"
+  ></formly-form>
   <ng-content></ng-content>
 </form>
