--- a/src/app/ui/components/image-modal/image-modal.component.html
+++ b/src/app/ui/components/image-modal/image-modal.component.html
@@ -7,9 +7,6 @@
   ></ion-img>
 
   <app-modal [showModal]="showModal" [title]="'GLOBAL.PICTURES'">
-    <ion-img
-      [alt]="alt"
-      [src]="`data:image/jpeg;base64, ${picture}`"
-    ></ion-img>
+    <ion-img [alt]="alt" [src]="`data:image/jpeg;base64, ${picture}`"></ion-img>
   </app-modal>
 }
