--- a/src/app/ui/components/volume-list-item/volume-list-item.component.html
+++ b/src/app/ui/components/volume-list-item/volume-list-item.component.html
@@ -2,7 +2,8 @@
   <ion-card-header>
     <app-image-modal
       [alt]="`${volume.volumeNumber} - ${volume.name ? volume.name : ''}}`"
-      [picture]="volume.picture"></app-image-modal>
+      [picture]="volume.picture"
+    ></app-image-modal>
     <ion-card-title>{{ volume.volumeNumber }}</ion-card-title>
   </ion-card-header>
   <ion-card-content>
