--- a/src/app/formly/types/input-selector/input-selector.component.html
+++ b/src/app/formly/types/input-selector/input-selector.component.html
@@ -1,5 +1,12 @@
-<ion-select [formControl]="formControl" [label]="props.label | transloco" label-placement="floating">
-  @for (option of (Array.isArray(props.options) ? props.options : (props.options | async)); track option.value) {
+<ion-select
+  [formControl]="formControl"
+  [label]="props.label | transloco"
+  label-placement="floating"
+>
+  @for (
+    option of Array.isArray(props.options) ? props.options : (props.options | async);
+    track option.value
+  ) {
     <ion-select-option [value]="option.value">{{ option.label }}</ion-select-option>
   }
 </ion-select>
