--- a/src/app/pages/settings/settings-page/settings-page.component.html
+++ b/src/app/pages/settings/settings-page/settings-page.component.html
@@ -1,14 +1,21 @@
 <ion-grid>
   <ion-row>
     <ion-col size="12">
-      <app-formly [fields]="fields" [form]="form" [model]="model$ | async"></app-formly>
+      <app-formly
+        (modelChange)="modelChange($event)"
+        [fields]="fields"
+        [form]="form"
+        [model]="model$ | async"
+      ></app-formly>
     </ion-col>
   </ion-row>
   <ion-row class="ion-justify-content-center">
     <ion-col size="auto">
       <div class="button-group">
-        <ion-button (click)="saveSqlDatabaseAsJSON()">Backup data</ion-button>
-        <ion-button>Restore data</ion-button>
+        <ion-button (click)="saveSqlDatabaseAsJSON()">{{
+          'SETTINGS.BUTTONS.CREATE_BACKUP' | transloco
+        }}</ion-button>
+        <ion-button>{{ 'SETTINGS.BUTTONS.IMPORT_BACKUP' | transloco }}</ion-button>
       </div>
     </ion-col>
   </ion-row>
